--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.1",
     "react-tiger-transition": "^4.1.2",
     "react-transition-group": "^4.4.1",
+    "react-typical": "^0.1.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
